# GenomeSequenceSimulator

./: README.md
example/: .gitignore  GSS  config.json  config.json_1  config.json_5  config.json_bk  example.sh  sequence.fasta
src/: .ycm_extra_conf.py  CMakeLists.txt  config.cpp  config.h  main.cpp  tags
src/genomeSequence/: CMakeLists.txt  logic.cpp  logic.h  sequence.cpp  sequence.h
src/thirdPart/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/fasta/: CMakeLists.txt  fastA.cpp  fastA.h
src/utils/fastq/: CMakeLists.txt  fastQ.cpp  fastQ.h
src/utils/iFileWR/: iFileWR.h
src/utils/log/: CMakeLists.txt  timeLog.h  utilsError.cpp  utilsError.hpp
